@@ -1,8 +1,8 @@
-# 虚拟机
+# 内存管理
 
 ## 虚拟机的内存区域有哪些？
 
-程序计数器，堆区，虚拟机桟，本地方法栈，栈堆，方法区（jdk8改为元数据区）
+程序计数器，堆区，虚拟机桟，本地方法栈，方法区（jdk8改为元数据区）
 
 ## 虚拟机的各个区域存储什么？
 
@@ -10,9 +10,28 @@
 
 栈区存储基本类型和引用，方法的无限递归产生StackOverflowError错误。每个方法执行即是创建一个栈帧，包括局部变量表，操作数栈，动态链接，方法出入口等信息。其中局部变量表包括编译可知的基本类型，对象引用和返回地址。
 
-方法区存储字节码、常量、静态变量，JIT机器码，常量池。java7以后转移到了堆区。
+方法区存储字节码、常量、静态变量，JIT机器码，常量池。其中常量池逻辑上属于方法区，物理上在java7以后转移到了堆区。
 
 堆外内存包括虚拟机的方法区（元数据区）和直接内存（+XX:MaxDirectMemorySize=xx），nio包的DirectByteBuffer.allocate方法可以申请直接内存，此时不要关闭显式回收。
+
+## 虚拟机栈帧结构是什么？
+
+局部变量表，操作数栈，动态链接，方法返回地址，以及附加信息。
+
+## 这个局部变量为什么没有被回收？
+
+```java
+//vm args: -Xms1m -Xmx1m -Xmn100k -Xss10k
+public static void main(String[] args){
+    {
+        byte[] b = new byte[100*1024];
+    }
+    //int a=0;
+    System.gc();
+}
+```
+
+因为线程栈的本地变量表是以slot变量槽为基本单位，通过索引位置定位，可以重复使用。如果没有进一步的操作，就不会覆盖原先的slot，也就不会回收。如果添加一步任意操作，覆盖slot，原先的引用消失，就会回收。
 
 ## 方法区和永久区的关系怎么理解？
 
@@ -40,9 +59,9 @@ jdk1.6及之前，运行时常量池是方法区的一部分。jdk1.7将运行�
 
 1. 执行<init>方法，从父类开始初始化类。
 
-## 对象头包括哪些内容？
+## 对象和对象头包括哪些内容？
 
-对象的内存占用包括对象头，实例数据和8字节对齐填充。未开启指针压缩的虚拟机创建的普通对象的对象头分为2部分：
+HotSpot虚拟机中，对象的内存包括对象头，实例数据和8字节对齐填充。32位和未开启指针压缩的64位虚拟机创建的普通对象的对象头分为2部分：
 
 1. MarkWord部分的位数与jvm相同，包括哈希码、gc分代年龄、锁状态标记、线程持有的锁、偏向线程ID、偏向时间戳等。
 
@@ -50,7 +69,7 @@ jdk1.6及之前，运行时常量池是方法区的一部分。jdk1.7将运行�
 
 1. 数组对象还包括数组大小的第3部分，这样，64位虚拟机创建的普通/数组对象最小为16/24字节，32位则是8/16字节。
 
-## 这个对象的内存占用是怎样的？
+## 这个HashMap对象的内存占用是怎样的？
 
 HashMap<Long,Long>的kv2个长整形数据(8)占空间16B，加上对象头(8)和类指针(8)，达到48B。包装成Entry对象后，加上对象头(16)、next(8)和hash字段(4+4)，达到80B. HashMap作为存储容器，要加上引用(8)达到88B。空间效率为16/88=18%.
 
@@ -60,7 +79,7 @@ HashMap<Long,Long>的kv2个长整形数据(8)占空间16B，加上对象头(8)�
 
 ## 常用的虚拟机参数有哪些？
 
--Xms, -Xmx, -server, -XX:GCUtil, -XX:HeapDumpOnOutofMemeryError 
+-Xms, -Xmx, -server, -XX:GCUtil, -XX:+HeapDumpOnOutOfMemeryError 
 
 -Xbootclasspath=... 可以指定启动类路径
 
@@ -76,9 +95,55 @@ Object类里的方法，在对象回收时被调用，执行时间不可预测�
 
 ## Java栈什么时候会发生内存溢出，Java堆呢？
 
-递归深度过大，会内存溢出。对象数量过大，会内存溢出，比如集合类持有对象。解决方案之一是使用弱引用和软引用。
+递归深度过大，栈溢出。对象数量过大，堆溢出，比如集合类持有对象。解决方案之一是使用弱引用和软引用。
 
-## 尾递归
+## 写一段内存溢出的代码
+
+```java
+//堆溢出，vm args: -Xms10m -Xmx10m -XX:+HeapDumpOnOutOfMemoryError
+List<Object> list = new LinkedList<>();
+while(true){
+    list.add(new Object());
+}
+
+//栈溢出，vm args: -Xss10k
+public int f(){
+	f(n++)+=1;
+    return f()-1;
+}
+
+//方法区常量池溢出，jdk1.6- vm args: -XX:PermSize=1M -XX:MaxPermSize=1M
+List<String> list = new LinkedList<>();
+while(true){
+    list.add(new String());
+}
+
+//方法区溢出，jdk1.7-
+while(true){
+    //cglib,javaassit,asm等操作字节码生成新的类
+}
+
+//直接内存溢出 vm args: -XX:MaxDirectMemorySize=1M
+List<ByteBuffer> list = new LinkedList<>();
+while(true){
+    list.add(ByteBuffer.allocateDirect(100000));
+}
+
+```
+
+
+
+## 尾递归优化了什么？
+
+递归是方法自调用，栈帧过深就可能栈溢出。尾递归优化可以解决这个问题。
+
+尾递归是把自调用放在最后的一种写法：`return f(n)`或者`f(n)`。
+
+具有尾递归优化功能的编译器就会在自调用的时候直接使用已有的栈帧，不再创建。这样就加快了方法调用速度。
+
+## 调用System.gc()会发生什么?
+
+通知GC开始工作，但是GC真正开始的时间不确定。
 
 ## 程序结束的方式有哪些？
 
@@ -92,31 +157,38 @@ Object类里的方法，在对象回收时被调用，执行时间不可预测�
 
 # 垃圾收集
 
-## Java对象的回收方式，回收算法是什么？
+## 判断对象存活的算法是什么？
 
-## 虚拟机如何解决循环引用问题？
+1. 引用计数法：
 
-引用计数法无法解决循环引用问题，jvm使用的可达性分析算法来判断对象存活，根节点类的引用来源包括JNI、栈、方法区静态属性和常量。
+   对象维护一个计数器，对被引用次数计数，变成零，就可以回收了。
+
+   缺点是：不能解决循环引用问题。
+
+1. 可达性分析算法
+
+   从根节点按照引用链关系，进行（深度优先）搜索，判断可达性。然后回收不可达对象。
+
+   根节点包括：虚拟机栈和本地方法栈引用的对象，静态属性和常量引用的对象。
+
+## Java对象的生命周期
+
+创建阶段 、 应用阶段 、不可见阶段 、不可达阶段 、收集阶段 、终结阶段、 对象空间重新分配阶段等。
 
 ## 四种引用的回收时间是什么？
 
-强引用对象走回收流程，软引用在内存溢出前回收，弱引用在下次垃圾手机前回收（ThreadLocal使用这种引用），虚引用没有生存时间。
+强引用对象走回收流程，软引用在内存溢出前回收，弱引用在下次就回收（ThreadLocal使用这种引用），虚引用没有生存时间。
 
 ## finalize方法的执行过程？
 
 对象回收时，没有覆盖或者已调用过finalize()方法的对象没有必要执行该方法，必要执行的对象会被放到F-Queue回收队列里，等待低优先级的Finalizer线程执行该方法。等待队列里的对象在回收之前可以人为改变引用类型而被抢救。
 
-## 方法区会不会被回收？
-
-字节码生成类的框架如asm, myassist, 动态生成jsp和OSGI频繁自定义类加载器的情况需要类卸载功能，回收方法区。
-
 ## 方法区类对象的回收需要满足什么条件？
 
 1. 该类所有的实例都已经被回收
-
 1. 加载该类的ClassLoader加载器已经被回收。
-
 1. Class对象没有被引用，无法反射访问该类对象的方法。
+1. 虚拟机没有提供-Xnoclassgc参数。
 
 ## 垃圾收集算法以及对应的老年代收集器有哪些？
 
@@ -135,6 +207,36 @@ Object类里的方法，在对象回收时被调用，执行时间不可预测�
 新生代的Parallel Scavenge和老年代的Serial Old, Parallel Old搭配。
 
 G1收集器同时包括新生代和老年代。
+
+## 分代与回收过程是怎样的？
+
+分为新生代、老年代和永久代。
+
+对象的创建：一个对象主要在年轻代的Eden区创建。如果启用了本地线程分配缓冲，将按照线程优先在TLAB上分配。如果对象的大小超过了`PretenureSizeThreshold`空间阈值，或者minor gc后仍然超过了Eden区的大小，就会直接分配到老年代。
+
+回收检查：Eden区没有足够空间分配时，会触发新生代对象的回收。虚拟机先检查老年代最大可用的连续空间是否大于新生代所有对象的总大小或者历次晋升到老年代对象的平均大小。如果大于，就尝试minor gc。否则就full gc。
+
+新生代回收：Eden区对象的年龄都是零。minor gc把新生代存活对象的年龄加一，记录在对象头上。并且转移到survivor区。如果survivor区空间不够，就会通过分配担保机制直接转移到老年代。survivor区的回收使用复制算法，对象年龄超过了 `MaxTenuringThreshold` 最大年龄阈值，就会转移到老年代。如果survivor区中相同年龄所有对象大小的总和超过survivor空间的一半，将和更大年龄的对象一起直接进入老年代。
+
+老年代回收：如果是CMS收集器，老年代对象占用老年代的比重超过了 `CMSInitiatingOccupancyFraction` 回收触发阈值，就会发起major gc。如果预留的内存无法满足回收，就会临时启用ParNew收集器进行full gc，后果是 stop the world 停顿时间长。
+
+永久代回收：full gc会回收。
+
+## 垃圾回收时为什么会停顿？
+
+虚拟机使用可达性分析算法回收，枚举根节点需要确保引用关系不变，因此在安全点和安全区发生停顿。
+
+安全点和安全区是引用关系不变的代码位置和片段。在确认系统完成了根节点枚举之后，就可以离开安全点和安全区。
+
+## 虚拟机如何快速枚举根节点对象？
+
+类加载完成后，HotSpot就计算出对象内不同偏移量的数据类型，以及JIT编译后的引用位置，保存在OopMap的数据结构中。
+
+## 如何安全点的停顿是怎么实现的？
+
+复用的指令序列包括方法调用，循环跳转，异常跳转等，具有“长时间运行”的特征，这些指令会产生安全点，让虚拟机停顿。
+
+线程的停顿是通过主动式中断实现的。中断标志位于安全点和新对象需要分配内存的位置，线程轮询，发现标志为真就中断挂起。
 
 ## Parellel Old收集器的特点与使用方法是什么？
 
@@ -170,15 +272,36 @@ G1收集器把内存分为相同大小的Region区，每个区都有对应的Rem
 
 多核服务器可以通过-XX:ParallelGCThreads=xx来限制回收线程的数量，提高性能。大对象通过-XX:PretenureSizeThreshold=2000直接分配到老年代，避免在新生代回收耗时。
 
+## 写一段垃圾回收代码。
+
+```java
+//minor gc, vm args: -Xms1m -Xmx1m -Xmn100k -verbose:gc +XX:PrintGCDetails
+Byte[] a;
+for(int i=0;i<20;i++){
+    a = new Byte[10*1024];
+}
+
+//大对象直接进入老年代, vm args: -Xms1m -Xmx1m -Xmn100k -verbose:gc +XX:PrintGCDetails +XX:PretenureSizeThreshold=1024
+Byte[] b = new Byte[100*1024];
+
+//长期存活的对象进入老年代, vm args: -Xms1m -Xmx1m -Xmn100k -verbose:gc +XX:PrintGCDetails +XX:MaxTenuringThreshold=1
+LinkedList<Byte[]> c = new LinkedList<>();
+for(int i=0;i<20;i++){
+    c.add(new Byte[10*1024]);
+}
+```
+
+
+
 # 调试优化
 
 ## jdk内置的方法有哪些？
 
 jps -v 显示虚拟机进程号和包括参数的进程名称。
 
-jstat -gcutil [pid] 查看堆内存使用率和回收时间等信息。
+jstat -gcutil [pid] 查看堆内存使用率和回收时间等统计信息。
 
-jstat -class [pid] 查看类加载时间等信息。
+jstat -class [pid] 查看类加载时间等统计信息。
 
 jmap -dump:format=b,file=xx [pid] 可以得到堆转储文件，其他方法包括：使用-XX:+HeapDumpOnOutOfMemoryError让虚拟机在OOM时生成，使用-XX:+HeapDumpOnCtrlBreak允许按下Ctrl+Break键来生成，Linux系统下通过kill -3 [pid]来生成。
 
@@ -202,15 +325,25 @@ ps -eLf |grep java -c 可以查看java线程数
 
 ## CPU使用率100%的原因有哪些？
 
-死循环。长时间的虚拟机回收。复杂的操作，比如正则解析。HashMap线程不安全的操作导致的bug。外部调用，如Runtime.getRuntime().exec()方法可以通过fork新进程来调用外部shell脚本，非常耗资源。
+业务代码的死循环。
+
+长时间的full gc。
+
+复杂的操作，比如正则解析，低效的SQL。
+
+HashMap线程不安全的操作导致的bug。
+
+外部调用，如Runtime.getRuntime().exec()方法可以通过fork新进程来调用外部shell脚本，非常耗资源。
 
 ## 系统变慢的原因有哪些？
 
-频繁的虚拟机回收。
+频繁的虚拟机回收。过长的系统调用链。数据库线程池满。
 
 ## 如何定位到问题线程？
 
 jps或者top得到进程号，top -pH [pid] 可以查看该进程的线程列表，printf "%x\n" [tid]将线程号格式化为16进制。jstack [pid] 打印线程堆栈到文件，通过grep搜索这个文件来定位到问题线程位置。
+
+还可以通过Thread类的getAllStackTraces()方法来获取所有线程的StackTraceElement对象，返回给前台管理页面。
 
 ## 如何得到堆转储文件？
 
@@ -255,7 +388,7 @@ jstat -gcutil [tid] [time] [num] 可以查看GC情况，FGC数量大而且在增
 加载，连接，初始化，使用，卸载回收。其中，连接包括验证，准备，解析。
 
 ## 类加载器有哪些？
-启动类加载器（bootstrap class loader）：只加载 JVM 自身需要的类，包名为 java、javax、sun 等开头。
+启动类加载器（bootstrap class loader）：只加载 JVM 自身需要的类，或者Xbootstrap参数指定的类。
 扩展类加载器（extensions class loader）：加载 JAVA_HOME/lib/ext 目录下或者由系统变量 -Djava.ext.dir 指定位路径中的类库。
 应用程序类加载器（application class loader）：加载系统类路径 java -classpath 或 -Djava.class.path 下的类库。
 自定义类加载器（java.lang.classloder）：继承 java.lang.ClassLoader 的自定义类加载器。
@@ -310,7 +443,7 @@ jstat -gcutil [tid] [time] [num] 可以查看GC情况，FGC数量大而且在增
 
 ## Java9是怎么实现模块化的？
 
-# 编译原理知识
+# 编译优化
 
 ## 编译与反编译
 
@@ -374,5 +507,33 @@ options、管道、后台异步任务
 
 利用Arthas排查Spring Boot应用NoSuchMethodError
 
+说一下 jvm 的主要组成部分？及其作用？
 
+\195. 说一下 jvm 运行时数据区？
+
+\196. 说一下堆栈的区别？
+
+\197. 队列和栈是什么？有什么区别？
+
+\198. 什么是双亲委派模型？
+
+\199. 说一下类加载的执行过程？
+
+\200. 怎么判断对象是否可以被回收？
+
+\201. java 中都有哪些引用类型？
+
+\202. 说一下 jvm 有哪些垃圾回收算法？
+
+\203. 说一下 jvm 有哪些垃圾回收器？
+
+\204. 详细介绍一下 CMS 垃圾回收器？
+
+\205. 新生代垃圾回收器和老生代垃圾回收器都有哪些？有什么区别？
+
+\206. 简述分代垃圾回收器是怎么工作的？
+
+\207. 说一下 jvm 调优的工具？
+
+\208. 常用的 jvm 调优的参数都有哪些？
 
